...
            )
        },
        floatingActionButton = {
            FloatingActionButton(
                modifier = Modifier
                    .padding(dimensionResource(id = R.dimen.padding_medium))
                    .testTag("add-location-button"),
                shape = MaterialTheme.shapes.extraLarge,
                onClick = navigateToAddLocation
            ) {
                Icon(
                    imageVector = Icons.Default.Add,
                    contentDescription = stringResource(R.string.add_location)
...
